# TipTrip

./: .gitignore  README.md  pyproject.toml
tiptrip/: main.py  pyproject.toml  requirements.txt  sites.sqlite
tiptrip/components/: __init__.py  address_input.py  audio_player.py  banners.py  bars.py  card_payment_input.py  carousel.py  date_time_input.py  error_banner.py  gas_type_liters.py  geolocator.py  history_table.py  loading_ring.py  message.py  payment_input.py  place_card.py  place_details.py  splash.py  titles.py
tiptrip/data/: __init__.py  db.py  hash_password.py
tiptrip/models/: vosk_main.py
tiptrip/resources/: __init__.py  config.py  functions.py  router.py  styles.py  texts.py
tiptrip/views/: __init__.py  account.py  change_password.py  chatbot.py  edit_user.py  favorites.py  forgotten_pwd.py  history_view.py  home.py  loading.py  map.py  paid.py  permission.py  place_details.py  privacy_politics.py  sign_in.py  sign_up.py  terms_conditions.py  update_user.py  verify_user.py
