[tool.poetry]
name = "TipTrip"
version = "0.0.1"
description = """"""
authors = [
    "Aguilera Gómez Donaji <daguilerad1700@alumno.ipn.mx>",
    "Ayala Gonzáles Ricardo Ángel <rayalag1700@alumno.ipn.mx>",
    "Sandoval Gil Gael Sebastián <gsandovalg1700@alumno.ipn.mx>"
]
# readme = "README.md"
readme = "TipTrip es una aplicación móvil diseñada para ayudar a los turistas a descubrir y explorar sitios turísticos en la Ciudad de México."

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.25.1"
requests = "^2.32.3"
geopy = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
